app/assets/stylesheets/bdc_home.sass
body
  background: image-url('white_top_bg.jpg') repeat-x

p
  margin-bottom: 0

#wrapper
  padding: 4px 10px 0px

#header_outer
  background: none
  position: static

#container.no_sidebar
  padding-left: 0px

#main article, #main article::after
  background: none
  background-image: none
  border: none
  padding: 10px
  box-shadow: none

#hero
  background: image-url("laptop.png") no-repeat
  height: 535px

#hero #hero_content
  float: right
  width: 350px
  margin-top: 100px

#hero #hero_content
  h1
    font-size: 50px
    font-family: Arial
    letter-spacing: -0.05em
    margin-left: -20px
  p
    font-size: 18px
    color: #666
    line-height: 1.3em
    margin-bottom: 40px

.cta
  background: #91B164
  display: block
  color: #fff
  font-weight: bold
  font-size: 16px
  text-align: center
  text-decoration: none
  padding: 5px 35px
  width: 175px
  margin-left: 20px
  float: left
  border-radius: 4px
  border: 1px #607346 solid
  box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
  text-shadow: 0 -1px 0 #657C46

.hero_shadow
  position: relative
  top: -1px
  width: 100%

#main article ul
  margin-top: 30px

  li
    display: block
    float: left
    width: 220px
    margin-right: 20px
    padding-top: 220px
    padding-left: 0px

  li.first
    margin-left: 10px
    margin-top: 50px

  li.last
    margin-right: 0px
    margin-top: 50px

  li h2
    font-size: 16px

  li.read_bible
    background: image-url("read_bible_icon.jpg") no-repeat 15px 0px

  .study_bible
    background: image-url("highlight_bible_icon.jpg") no-repeat 15px 0px

  li.subscribe_bible
    background: image-url("subscribe_bible_icon.jpg") no-repeat 15px 0px

  .take_bible
    background: image-url("take_bible_icon.jpg") no-repeat 15px 0px

  li .pod_content
    border: 1px solid #E5E4E2
    border-bottom: 1px solid #FFF
    border-radius: 10px
    padding: 20px
    background: #f5f5f4
    box-shadow: inset 0px 2px 4px rgba(#000, .12)

#main article .explore_cta
  background: #3787d6
  padding: 20px 20px 10px 130px
  border-radius: 5px
  overflow: hidden
  margin-bottom: 30px
  box-shadow: inset 0px -2px 0px rgba(255, 255, 255, 1)

  h1
    font-family: Arial
    letter-spacing: -0.05em

  a
    float: left
    background: #91B164
    display: block
    color: #fff
    font-weight: bold
    font-size: 16px
    text-align: center
    text-decoration: none
    padding: 5px 35px
    width: 200px
    margin-left: 20px
    border-radius: 4px
    border: 1px #607346 solid
    box-shadow: inset 0px 2px 0px rgba(255, 255, 255, 0.3), inset 0px -2px 0px rgba(0, 0, 0, 0.3)
    text-shadow: 0 -1px 0 #657C46

  h1
    margin-bottom: 10px
    margin-left: 80px
    font-size: 42px
    float: left
    margin-right: 30px
    color: #fff

#main article .bottom_cta
  background: #eaeae8 image-url("app-icon-en-73x73.png") no-repeat 30px 52%
  padding: 20px 20px 15px 130px
  border-radius: 10px
  box-shadow: inset 0px 2px 4px rgba(#000, .12)
  overflow: hidden
  border: 1px solid #E5E4E2
  border-bottom: 1px solid #FFF

  p
    width: 500px
    float: left
    margin-right: 50px
    line-height: 1.3em

  a
    float: left
    background: #666
    display: block
    color: #fff
    font-weight: bold
    font-size: 16px
    text-align: center
    text-decoration: none
    padding: 5px 15px
    width: 200px
    border-radius: 5px
    border: 1px #575757 solid
    box-shadow: inset 0px 2px 0px rgba(#FFF, 0.3), inset 0 -2px 0 rgba(#000, 0.3)
    margin-top: -20px

  h2
    margin-bottom: 10px

#footer
  padding: 20px 10px

.flash_error
  margin: 0px
  width: 980px

// ----------------------------------- Media queries -----------------------------------

@media only screen and (max-width: 480px)

  body
    background: none
    background-color: #EAEAE8
    min-width: 0

  #wrapper
    margin: 0
    padding: 0
    width: auto

  #header_outer
    background: none
    padding: 0
    position: relative
    width: auto
    z-index: 0
    left: -2px

  #header
    width: 100%
    form, nav
      display: none
    #nav
      width: 40%

  #main
    float: none
    width: auto
    margin: 0

    article
      position: relative
      min-height: auto
      padding: 0

      #hero
        background: none
        background-color: #FFF
        height: auto
        padding: 16px

        #hero_content
          float: none
          width: auto
          margin-top: 0

          .cta
            padding: 5px 35px
            width: 80%
            margin: 0 auto
            float: none
          
          .cta:hover
            color: #fff

          h1
            font-size: 36px
            margin-left: 0

          p
            font-size: 15px

      .hero_shadow
        position: relative
        top: -13px

      ul
        margin: 0
        li, li.last, li.first
          float: none
          width: auto
          margin: 0 auto 20px
          padding: 0
          width: 90%
          border-radius: 10px
          background: none
          .pod_content
            border-radius: 10px
          p
            margin: 0
          h2, p span.narrow
            width: 70%
          p span.narrow
            display: block
          
        li.last
          margin-bottom: 0
        li.read_bible div
          background: #F0EFED image-url("read_bible_icon_m.png") no-repeat 93% 20px 
        li.study_bible div
          background: #F0EFED image-url("highlight_bible_icon_m.png") no-repeat 93% 20px
        li.subscribe_bible div
          background: #F0EFED image-url("subscribe_bible_icon_m.png") no-repeat 93% 20px
        li.take_bible div
          background: #F0EFED image-url("take_bible_icon_m.png") no-repeat 93% 20px

      .explore_cta
        border-radius: 0
        padding: 20px
        margin-top: 20px
        h1, a
          float: none
          margin: 0
        h1
          margin-bottom: 10px
        a
          width: 80%
          
      .bottom_cta
        width: auto
        padding: 0 20px
        background-position: 20px 0
        box-shadow: none
        border: 0
        h2, p
          width: auto
        h2
          margin-left: 90px
        p
          margin: 0 0 0 90px
        a
          margin: 20px 0
          width: 90%

  .flash_error
    width: auto

